--- a/configs/config.yml
+++ b/configs/config.yml
@@ -6,4 +6,8 @@ feature_params:
   categorical_features: ['sex', 'cp', 'restecg', 'exang', 'slope', 'ca', 'thal']
   numerical_features: ['chol', 'thalach', 'oldpeak', 'trestbps', 'fbs', 'age']
   target: 'target'
-
+classifier_params:
+  C: 1.0
+  penalty: "l2"
+  fit_intercept: True
+  random_state: 23
