--- a/configs/config_lr.yml
+++ b/configs/config_lr.yml
@@ -1,14 +1,16 @@
 input_data_path: "data/heart.csv"
+input_data_for_validation: "data/sample_for_predict.csv"
 output_model_path: "models/logistic_regression.pkl"
-output_data_preprocessor_path: "models/data_preprocessor.pkl"
+output_data_preprocessor_path: "models/data_preprocessor_lr.pkl"
+predicts_path: "data/predicts.csv"
 logger_config: "configs/logger_config.yml"
 model_type: "Logistic Regression"
 split_params:
   validation_size: 0.25
   random_state: 23
 feature_params:
-  categorical_features: ['sex', 'cp', 'restecg', 'exang', 'slope', 'ca', 'thal']
-  numerical_features: ['chol', 'thalach', 'oldpeak', 'trestbps', 'fbs', 'age']
+  categorical_features: ['sex', 'cp', 'restecg', 'exang', 'slope', 'fbs', 'ca', 'thal']
+  numerical_features: ['chol', 'thalach', 'oldpeak', 'trestbps', 'age']
   target: 'target'
 classifier_params:
   C: 1.0
