--- a/homework1/requirements.txt
+++ b/homework1/requirements.txt
@@ -22,7 +22,7 @@ pytest-cov==2.11.1
 python-dateutil==2.8.1
 python-stdnum==1.16
 pytz==2021.1
-PyYAML==5.4.1
+PyYAM==5.4.1
 scikit-learn==0.24.1
 scipy==1.6.2
 six==1.15.0
