--- a/online_inference/Dockerfile
+++ b/online_inference/Dockerfile
@@ -8,13 +8,13 @@ RUN pip install /ml_project-0.1.0.tar.gz
 
 COPY /homework1/configs/ homework1/configs
 COPY /homework1/data homework1/data
-#COPY /homework1/models homework1/models
+COPY /homework1/models homework1/models
 COPY /online_inference /online_inference
-RUN mkdir /homework1/models
+#RUN mkdir /homework1/models
 
 
-RUN cd /homework1 && ml_project_train configs/config_lr.yml train
-RUN cd /homework1 && ml_project_train configs/config_rf.yml train
+#RUN cd /homework1 && ml_project_train configs/config_lr.yml train
+#RUN cd /homework1 && ml_project_train configs/config_rf.yml train
 
 WORKDIR /online_inference
 CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8000"]
