--- a/airflow_ml_dags/images/airflow-docker/Dockerfile
+++ b/airflow_ml_dags/images/airflow-docker/Dockerfile
@@ -1,6 +1,9 @@
 ARG AIRFLOW_BASE_IMAGE="apache/airflow:2.0.0-python3.6"
 FROM ${AIRFLOW_BASE_IMAGE}
 
+COPY requirements.txt requirements.txt
+
+RUN pip install -r requirements.txt
 RUN pip install --user --no-cache-dir \
     apache-airflow-providers-docker==1.2.0
 
