--- a/airflow_ml_dags/images/airflow-docker/requirements.txt
+++ b/airflow_ml_dags/images/airflow-docker/requirements.txt
@@ -4,3 +4,20 @@ pandas
 numpy
 hypothesis==6.10.0
 fastapi==0.63.0
+attrs
+click
+cloudpickle
+importlib-metadata
+iniconfig
+joblib
+marshmallow
+marshmallow-dataclass
+mypy-extensions
+pluggy
+pydantic
+pyparsing
+PyYAML
+scipy
+sortedcontainers
+threadpoolctl
+zipp
